# LeePanel

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  multi-session-analysis.md  package-lock.json  package.json  tsconfig.json  update.json
docs/: auto-testing-analysis.md  bt-panel-code-analysis.md  bt-panel-dependency-sources.md  bt-panel-fast-install.md  bt-panel-php-analysis.md  bt-vs-taichi.md  e2e-detailed-plan.md  e2e-full-coverage-analysis.md  e2e-testing-analysis.md  market-analysis.md  php-compile-cross-platform.md  php-source-compile.md  promo-article.md  server-panel-market.md  upload-workers-limit.md
sigs/: LeePanel-1.0.1-1.x86_64.rpm.sig  LeePanel-1.0.10-1.x86_64.rpm.sig  LeePanel-1.0.11-1.x86_64.rpm.sig  LeePanel-1.0.12-1.x86_64.rpm.sig  LeePanel-1.0.13-1.x86_64.rpm.sig  LeePanel-1.0.14-1.x86_64.rpm.sig  LeePanel-1.0.15-1.x86_64.rpm.sig  LeePanel-1.0.16-1.x86_64.rpm.sig  LeePanel-1.0.17-1.x86_64.rpm.sig  LeePanel-1.0.18-1.x86_64.rpm.sig  LeePanel-1.0.2-1.x86_64.rpm.sig  LeePanel-1.0.3-1.x86_64.rpm.sig  LeePanel_1.0.0_x64-setup.exe.sig  LeePanel_1.0.0_x64_en-US.msi.sig  LeePanel_1.0.10_amd64.AppImage.sig  LeePanel_1.0.10_amd64.deb.sig  LeePanel_1.0.10_x64-setup.exe.sig  LeePanel_1.0.10_x64_en-US.msi.sig  LeePanel_1.0.11_amd64.AppImage.sig  (+45 more)
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  server.rs  ssh.rs
src-tauri/src/commands/: config.rs  fb.rs  mod.rs  server.rs  server_ops.rs  ssh.rs
(+103 files in other folders)
