[package]
name = "leepanel"
version = "1.0.14"
description = "LeePanel - SSH Server Management Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2"
base64 = "0.22"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "io-util"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
open = "5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
